[package]
name = "hydra_system"
version = "0.1.0"
edition = "2024"

[dependencies]
arkworks-r1cs-gadgets = { version = "1.2.0", default-features = false }
arkworks-native-gadgets = { version = "1.2.0", default-features = false }
ark-bls12-381 = "0.3.0"
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-groth16 = "0.3.0"
